small screen header background fix. Increased height of header on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,9 @@ span {
 	}
 }
 @media (max-width: 600px) {
+	.App-header {
+		height: 450px;
+	}
 	.Header-content {
 		padding: 0 5%;
 	}
